resolved some simple code smells